# IIS_2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  python-app.yml  requirements.txt
.dvc/: config
.github/workflows/: docker-app.yml  mlflow-app.yml  python-app.yml
data/processed/: .gitignore  data_for_prediction.csv  data_for_prediction.csv.dvc  prediction_ref.csv  processed_data.csv  test.csv  test.csv.dvc  train.csv  train.csv.dvc
data/raw/: .gitignore  kolesa.csv  kolesa.csv.dvc  kolesa_ref.csv  vreme.csv  vreme.csv.dvc  vreme_ref.csv
docker/: App.py  Dockerfile  best_model_LSTM.keras
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: kolesa_check.yml  pred_check.yml  vreme_check.yml
great_expectations/expectations/: .ge_store_backend_id  kolesa_suite.json  pred_suite.json  vreme_suite.json
great_expectations/uncommitted/: config_variables.yml  datasource_new.ipynb  edit_checkpoint_kolesa_check.ipynb  edit_checkpoint_pred_check.ipynb  edit_checkpoint_vreme_check.ipynb  edit_kolesa_suite.ipynb  edit_pred_suite.ipynb  edit_vreme_suite.ipynb
mlruns/0/: meta.yaml
models/: best_model_GRU.h5  model.onnx  novi.pth  novi1.pkl  rnn_model.pth  scaler.pkl
notebooks/: App.py  Naloga_1.ipynb  best_model_GRU.h5  best_model_LSTM.h5  best_model_SimpleRNN.h5  scaler6.pkl
notebooks/reports/: metrics.txt  (+1 more)
pytest/: test1.py  test_2.py
reports/: data_drift_kolesa.html  data_drift_prediction.html  data_drift_vreme.html  metrics.txt  test_metrics.txt  train_metrics.txt
test_data/: valid_and_test_data.py
(+23 files in other folders)
