[tool.poetry]
name = "prva"
version = "0.1.0"
description = "Prva naloga IIS"
authors = ["Mitja <mitja.cesar1@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
flask = "^3.0.2"
keras = "^3.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
